# quantum-column-generation

./: .gitignore  CLAUDE.md  README.md  issues.md  pyproject.toml
benchmarks/: README.md  slides_data.json
docs/: benchmarks.md  refinement.md
manim/: README.md  pyproject.toml  render_all.sh  usage.md
manim/scripts/: generate_colorings.py
manim/src/quantum_colgen_slides/: __init__.py
manim/src/quantum_colgen_slides/components/: __init__.py  colors.py  graph_utils.py
manim/src/quantum_colgen_slides/data/: __init__.py  benchmark_data.py  graph_colorings.json
manim/src/quantum_colgen_slides/scenes/: __init__.py  s01_title.py  s02_graph_coloring.py  s03_independent_set.py  s04_cg_overview.py  s05_rmp.py  s06_psp.py  s07_milp_limitation.py  s08_quantum_intro.py  s09_dirac_extraction.py  s10_benchmark.py  s10a_er40_graph.py  s10b_er40_colorings.py  s10c_er50_graph.py  s10d_er50_colorings.py  s11_summary.py
results/: benchmark_01.json  benchmark_02_large.json  benchmark_03_classical_scaling.json  benchmark_04_classical_scaling_500iter.json  benchmark_05_classical_large.json  benchmark_improved_classical.json  benchmark_improved_dirac_30.json  benchmark_timing_classical.json  benchmark_timing_dirac.json  extraction_analysis_er30.json  lp_vs_dirac_large.json  oracle_benchmark_large.json  trace_er40_0.3.json  trace_test.json  validation_classical.json  validation_dirac.json
scripts/: benchmark.py  benchmark_exact_ilp.py  benchmark_ilp_solvers.py  benchmark_improved.py  benchmark_oracles.py  dirac_extraction_experiments.py  experiment_column_quality.py  (+7 more)
(+86 files in other folders)
