[project]
name = "quantum-colgen-slides"
version = "0.1.0"
description = "Animated presentation explaining quantum column generation for graph coloring"
requires-python = ">=3.10"
dependencies = [
    "manim>=0.18.0",
    "manim-slides>=5.1.0",
    "numpy>=1.24.0",
    "networkx>=2.8",
    "av>=13.0.0,<14.0.0",  # Pin av to compatible version for manim-slides
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quantum_colgen_slides"]
